[package]
name = "census2csv"
version = "0.1.0"
authors = ["Michael Lazear <lazear@scripps.edu>"]
edition = "2018"

[dependencies]
census-proteomics = { version = "0.1.7", features =["serialization"] } 
clap = "2.33.0"
serde = { version = "1.0", features=["derive"], optional = true }
serde_json = "1.0"