[package]
name = "census2csv"
version = "0.1.3"
authors = ["Michael Lazear <lazear@scripps.edu>"]
edition = "2018"
license = "MIT"
description = "Convert TMT multiplexed proteomics data in the Census format to CSV files"
repository = "https://github.com/lazear/census2csv.git"
homepage = "https://github.com/lazear/census2csv"

[dependencies]
census-proteomics = { version = "0.1.8", features =["serialization"] } 
clap = "2.33.0"
serde = { version = "1.0", features=["derive"], optional = true }
serde_json = "1.0"
